# lucky-contracts

./: Deploy.toml
artifacts/reward_manager_v0_1_2/: reward_manager.contract  reward_manager.wasm
contracts/reward_manager/: Cargo.toml
logics/: Cargo.toml
logics/impls/reward/: psp22_reward.rs
logics/traits/reward/: psp22_reward.rs
