[package]
name = "lucky"
version = "0.1.2"
authors = ["guigou"]
edition = "2021"

[dependencies]
ink = { version = "=4.2.0", default-features = false}
ink_env = { version = "=4.2.0", default-features = false}
ink_primitives = { version = "=4.2.0", default-features = false}
ink_macro = { version = "=4.2.0", default-features = false}
ink_storage = { version = "=4.2.0", default-features = false}
scale = { package = "parity-scale-codec", version = "3", default-features = false, features = ["derive"] }
scale-info = { version = "2.6.0", default-features = false, features = ["derive"], optional = true }
openbrush = { tag = "3.1.0", git = "https://github.com/Brushfam/openbrush-contracts" , default-features = false, features = ["access_control"]}

[lib]
name = "lucky"
path = "lib.rs"
crate-type = ["rlib"]

[features]
default = ["std"]
std = [
    "ink/std",
    "ink_env/std",
    "ink_primitives/std",
    "ink_macro/std",
    "ink_storage/std",
    "scale/std",
    "scale-info/std",
    "openbrush/std",
]
ink-as-dependency = []
